fixed z-index on 3d

--- a/css/styles.css
+++ b/css/styles.css
@@ -1523,6 +1523,7 @@ pre.code {
 				-moz-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
 				backface-visibility: hidden;
+				z-index: 2;
 			}
 			
 			.cback {
